Add ex1 test in bdd