@@ -9,6 +9,10 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
+        <cucumber.version>7.10.0</cucumber.version>
+        <allure-maven.version>2.11.2</allure-maven.version>
+        <aspectj.version>1.9.7</aspectj.version>
+        <allure-testng.version>2.17.2</allure-testng.version>
         <webdrivermanager.version>5.3.0</webdrivermanager.version>
         <selenium.version>4.6.0</selenium.version>
         <lombok.version>1.18.24</lombok.version>
@@ -57,7 +61,7 @@
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
             <version>${assertj-core.version}</version>
-            <scope>test</scope>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
@@ -74,6 +78,22 @@
             <artifactId>lombok</artifactId>
             <version>${lombok.version}</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-testng</artifactId>
+            <version>${allure-testng.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-java</artifactId>
+            <version>${cucumber.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-testng</artifactId>
+            <version>${cucumber.version}</version>
         </dependency>
     </dependencies>
 
@@ -95,10 +115,26 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M5</version>
                 <configuration>
+                    <argLine>-javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
+                        --add-opens java.base/java.lang=ALL-UNNAMED
+                    </argLine>
                     <suiteXmlFiles>
                         <suiteXmlFile>${testng.suite.file}</suiteXmlFile>
                     </suiteXmlFiles>
                 </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.aspectj</groupId>
+                        <artifactId>aspectjweaver</artifactId>
+                        <version>${aspectj.version}</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
+
+            <plugin>
+                <groupId>io.qameta.allure</groupId>
+                <artifactId>allure-maven</artifactId>
+                <version>${allure-maven.version}</version>
             </plugin>
 
             <plugin>
@@ -139,9 +175,6 @@
     <profiles>
         <profile>
             <id>additionAndSubtractionTests</id>
-            <activation>
-                <activeByDefault>true</activeByDefault>
-            </activation>
             <properties>
                 <testng.suite.file>${testng.configs.path}/calculatorSumAndSubTests.xml</testng.suite.file>
             </properties>
@@ -160,11 +193,28 @@
                 <testng.suite.file>${testng.configs.path}/calculatorAllTests.xml</testng.suite.file>
             </properties>
         </profile>
-      
-      <profile>
+
+        <profile>
             <id>seleniumBaseTests</id>
             <properties>
                 <testng.suite.file>${testng.configs.path}/seleniumBaseTests.xml</testng.suite.file>
+            </properties>
+        </profile>
+
+        <profile>
+            <id>seleniumPageObjects</id>
+            <properties>
+                <testng.suite.file>${testng.configs.path}/seleniumPageObjects.xml</testng.suite.file>
+            </properties>
+        </profile>
+
+        <profile>
+            <id>allure</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <properties>
+                <testng.suite.file>${testng.configs.path}/allure.xml</testng.suite.file>
             </properties>
         </profile>
     </profiles>
